syntax = "proto3";

package adapter_metrics.v1;

// Encoded adapter metrics.
message ScrapeResponse {
  repeated bytes metrics = 1;
}

message ScrapeRequest {}

// Metrics grpc endpoints.
service AdapterMetricsService {
  rpc Scrape(ScrapeRequest) returns (ScrapeResponse);
}
